build(rdm-ui): 更新打包配置以支持多平台
- 修改 Windows 平台的 JDK 路径为环境变量 JAVA_HOME
- 新增 Linux 64 位和 ARM 64 位平台的打包配置
- 新增 macOS x86_64 和 arm64 平台的打包配置
- 优化 Linux 和 macOS平台的打包参数，包括图标和 VM 参数设置